--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
       <nav class="footer__column footer__column_content_social">
           <h5 class="footer__column-heading">Соцсети</h5>
           <div class="footer__column_links">
-            <p><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="YouTube"> YouTube</a></p>
-            <p><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="VK"> ВКонтакте</a></p>
-            <p><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="TikTok"> TikTok</a></p>
+            <p><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Ютуб">YouTube</a></p>
+            <p><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте"> ВКонтакте</a></p>
+            <p><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="ТикТок"> TikTok</a></p>
           </div>
       </nav>
     </div>
