--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="page" >
 
   <header class="header">
-    <img src="./images/logo_place_header.svg" alt="Логотип" class="logo_place_header">
+    <img src="./images/logo_place_header.svg" alt="Логотип" class="header__logo header__logo_place_header">
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы 
       можете использовать в своей жизни? <a href=# class="header__link">Узнать &rarr;</a></p>
@@ -20,7 +20,7 @@
 
   <main class="content">
     <section class="two-columns">
-      <h4 class="two-columns__brief"> <a href=# class="two-columns__brief">Главные проблемы в обучении</a></h4>
+      <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
       <div class="two-columns__main-text">
         <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы 
           готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,чтобы лучше сдать тест,
@@ -34,121 +34,121 @@
 
   <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
-      <h3 class="section-subtitle">Про учёбу и мозг</h3>
+      <p class="section-subtitle">Про учёбу и мозг</p>
     <div class="table">
       <div class="table__cell">
-        <div class="table__heading">86 миллиардов</div>
-        <div class="table__text">Число нейронов в мозге человека</div>
+        <p class="table__heading">86 миллиардов</p>
+        <p class="table__text">Число нейронов в мозге человека</p>
       </div>
       <div class="table__cell">
-        <div class="table__heading">2,1 миллиарда</div>
-        <div class="table__text">Число нуждающихся в повышении квалификации</div>
-        <div class="table__text">Всемирный банк, 2017</div>
+        <p class="table__heading">2,1 миллиарда</p>
+        <p class="table__text">Число нуждающихся в повышении квалификации</p>
+        <p class="table__text">Всемирный банк, 2017</p>
       </div>
       <div class="table__cell">
-        <div class="table__heading">1000 терабайт</div>
-        <div class="table__text">Объем памяти человека</div>
+        <p class="table__heading">1000 терабайт</p>
+        <p class="table__text">Объем памяти человека</p>
       </div>
       <div class="table__cell">
-        <div class="table__heading">500 триллионов</div>
-        <div class="table__text">Число ответственных за обучение нейронных синапсов у взрослого человека</div>
+        <p class="table__heading">500 триллионов</p>
+        <p class="table__text">Число ответственных за обучение нейронных синапсов у взрослого человека</p>
       </div>
       <div class="table__cell">
-        <div class="table__heading">420 миллионов</div>
-        <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
-        <div class="table__text">Всемирный банк, 2017</div>
+        <p class="table__heading">420 миллионов</p>
+        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+        <p class="table__text">Всемирный банк, 2017</p>
       </div>
       <div class="table__cell">
-        <div class="table__heading">17–20 лет</div>
-        <div class="table__text">Пик обучаемости</div>
+        <p class="table__heading">17–20 лет</p>
+        <p class="table__text">Пик обучаемости</p>
       </div>
       <div class="table__cell">
-        <div class="table__heading">1885 год</div>
-        <div class="table__text">Открытие кривой забывания</div>
+        <p class="table__heading">1885 год</p>
+        <p class="table__text">Открытие кривой забывания</p>
       </div>
       <div class="table__cell">
-        <div class="table__heading">1889 год</div>
-        <div class="table__text">Открытие условного рефлекса</div>
+        <p class="table__heading">1889 год</p>
+        <p class="table__text">Открытие условного рефлекса</p>
       </div>
     </div>
   </section> 
 
     <section class="feynman">
       <h2 class="feynman__title">Метод Фейнмана</h2>
-      <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-      <h4 class="feynman__link"> <a href=# class="feynman__link">Подробнее &rarr;</a></h4>
+      <p class="feynman__subtitle">Выучить и не забыть.</p>
+      <a href=# class="feynman__link">Подробнее &rarr;</a>
       <img class="feynman__image" src="./images/feynman.png" alt="Фейнман">
     </section>
 
     <section class="kaufman">
-      <h2 class="section-title section-title_dark">Принципы обучения</h2>
-      <h3 class="section-subtitle section-subtitle_dark">от Джоша Кайфмана</h3>
-      <div class="table table_dark">
+      <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+      <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кайфмана</h3>
+      <div class="table table_theme_dark">
         <div class="table__cell table__cell_theme_dark">
-          <div class="table__heading ">1</div>
-          <div class="table__text ">Выберите привлекательный проект.</div>
+          <p class="table__heading ">1</p>
+          <p class="table__text ">Выберите привлекательный проект.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <div class="table__heading">2</div>
-          <div class="table__text">Сосредоточьтесь на каком-то одном навыке.</div>
+          <p class="table__heading">2</p>
+          <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <div class="table__heading">3</div>
-          <div class="table__text">Определите целевой уровень мастерства.</div>
+          <p class="table__heading">3</p>
+          <p class="table__text">Определите целевой уровень мастерства.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <div class="table__heading">4</div>
-          <div class="table__text">Разбейте навык на элементы.</div>
+          <p class="table__heading">4</p>
+          <p class="table__text">Разбейте навык на элементы.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <div class="table__heading">5</div>
-          <div class="table__text">Приготовьте все необходимое для занятий.</div>
+          <p class="table__heading">5</p>
+          <p class="table__text">Приготовьте все необходимое для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <div class="table__heading">6</div>
-          <div class="table__text">Устраните препятствия для занятий.</div>
+          <p class="table__heading">6</p>
+          <p class="table__text">Устраните препятствия для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <div class="table__heading">7</div>
-          <div class="table__text">Выделите специальное время для занятий.</div>
+          <p class="table__heading">7</p>
+          <p class="table__text">Выделите специальное время для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <div class="table__heading">8</div>
-          <div class="table__text">Создайте быстрые петли обратной связи.</div>
+          <p class="table__heading">8</p>
+          <p class="table__text">Создайте быстрые петли обратной связи.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <div class="table__heading">9</div>
-          <div class="table__text">Занимайтесь по расписанию, корткими интенсивными интервалами.</div>
+          <p class="table__heading">9</p>
+          <p class="table__text">Занимайтесь по расписанию, корткими интенсивными интервалами.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <div class="table__heading">10</div>
-          <div class="table__text">Уделяйте внимание количеству и скорости.</div>
+          <p class="table__heading">10</p>
+          <p class="table__text">Уделяйте внимание количеству и скорости.</p>
         </div>
       </div>
-      <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
+      <div class="kaufman__triangle"></div>
     </section>
   </main>
 
   <footer class="footer">
     <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
-        <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo_place_footer">
-        <h4 class="footer__author">&copy; Константин Нисимов</h4>
+        <img src="./images/logo_place_footer.svg" alt="Логотип" class="footer__logo footer__logo_place_footer">
+        <p class="footer__author">&copy; Константин Нисимов</p>
       </div>
       <nav class="footer__column footer__column_content_info">
           <h5 class="footer__column-heading">О практикуме</h5>
-          <div class="footer__column_links">
-            <p><a href="#" class="footer__column-link">Главная</a></p>
-            <p><a href="#" class="footer__column-link">Концепция</a></p>
-            <p><a href="#" class="footer__column-link">Наставникам</a></p>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставникам</a>
           </div>
       </nav>  
       <nav class="footer__column footer__column_content_social">
           <h5 class="footer__column-heading">Соцсети</h5>
-          <div class="footer__column_links">
-            <p><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Ютуб">YouTube</a></p>
-            <p><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте"> ВКонтакте</a></p>
-            <p><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="ТикТок"> TikTok</a></p>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="ЮТ"> YouTube</a>
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВК"> ВКонтакте</a>
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="ТК"> TikTok</a>
           </div>
       </nav>
     </div>
