--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="page" >
 
   <header class="header">
-    <img src="./images/logo_place_header.svg" alt="Логотип" class="header__logo header__logo_place_header">
+    <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы 
       можете использовать в своей жизни? <a href=# class="header__link">Узнать &rarr;</a></p>
@@ -37,37 +37,37 @@
       <p class="section-subtitle">Про учёбу и мозг</p>
     <div class="table">
       <div class="table__cell">
-        <p class="table__heading">86 миллиардов</p>
+        <h3 class="table__heading">86 миллиардов</h3>
         <p class="table__text">Число нейронов в мозге человека</p>
       </div>
       <div class="table__cell">
-        <p class="table__heading">2,1 миллиарда</p>
+        <h3 class="table__heading">2,1 миллиарда</h3>
         <p class="table__text">Число нуждающихся в повышении квалификации</p>
         <p class="table__text">Всемирный банк, 2017</p>
       </div>
       <div class="table__cell">
-        <p class="table__heading">1000 терабайт</p>
+        <h3 class="table__heading">1000 терабайт</h3>
         <p class="table__text">Объем памяти человека</p>
       </div>
       <div class="table__cell">
-        <p class="table__heading">500 триллионов</p>
+        <h3 class="table__heading">500 триллионов</h3>
         <p class="table__text">Число ответственных за обучение нейронных синапсов у взрослого человека</p>
       </div>
       <div class="table__cell">
-        <p class="table__heading">420 миллионов</p>
+        <h3 class="table__heading">420 миллионов</h3>
         <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
         <p class="table__text">Всемирный банк, 2017</p>
       </div>
       <div class="table__cell">
-        <p class="table__heading">17–20 лет</p>
+        <h3 class="table__heading">17–20 лет</h3>
         <p class="table__text">Пик обучаемости</p>
       </div>
       <div class="table__cell">
-        <p class="table__heading">1885 год</p>
+        <h3 class="table__heading">1885 год</h3>
         <p class="table__text">Открытие кривой забывания</p>
       </div>
       <div class="table__cell">
-        <p class="table__heading">1889 год</p>
+        <h3 class="table__heading">1889 год</h3>
         <p class="table__text">Открытие условного рефлекса</p>
       </div>
     </div>
@@ -82,46 +82,46 @@
 
     <section class="kaufman">
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-      <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кайфмана</h3>
+      <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кайфмана</p>
       <div class="table table_theme_dark">
         <div class="table__cell table__cell_theme_dark">
-          <p class="table__heading ">1</p>
+          <h3 class="table__heading ">1</h3>
           <p class="table__text ">Выберите привлекательный проект.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <p class="table__heading">2</p>
+          <h3 class="table__heading">2</h3>
           <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <p class="table__heading">3</p>
+          <h3 class="table__heading">3</h3>
           <p class="table__text">Определите целевой уровень мастерства.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <p class="table__heading">4</p>
+          <h3 class="table__heading">4</h3>
           <p class="table__text">Разбейте навык на элементы.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <p class="table__heading">5</p>
+          <h3 class="table__heading">5</h3>
           <p class="table__text">Приготовьте все необходимое для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <p class="table__heading">6</p>
+          <h3 class="table__heading">6</h3>
           <p class="table__text">Устраните препятствия для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <p class="table__heading">7</p>
+          <h3 class="table__heading">7</h3>
           <p class="table__text">Выделите специальное время для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <p class="table__heading">8</p>
+          <h3 class="table__heading">8</h3>
           <p class="table__text">Создайте быстрые петли обратной связи.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <p class="table__heading">9</p>
+          <h3 class="table__heading">9</h3>
           <p class="table__text">Занимайтесь по расписанию, корткими интенсивными интервалами.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
-          <p class="table__heading">10</p>
+          <h3 class="table__heading">10</h3>
           <p class="table__text">Уделяйте внимание количеству и скорости.</p>
         </div>
       </div>
@@ -132,11 +132,11 @@
   <footer class="footer">
     <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
-        <img src="./images/logo_place_footer.svg" alt="Логотип" class="footer__logo footer__logo_place_footer">
+        <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
         <p class="footer__author">&copy; Константин Нисимов</p>
       </div>
       <nav class="footer__column footer__column_content_info">
-          <h5 class="footer__column-heading">О практикуме</h5>
+          <h3 class="footer__column-heading">О практикуме</h3>
           <div class="footer__column-links">
             <a href="#" class="footer__column-link">Главная</a>
             <a href="#" class="footer__column-link">Концепция</a>
@@ -144,11 +144,14 @@
           </div>
       </nav>  
       <nav class="footer__column footer__column_content_social">
-          <h5 class="footer__column-heading">Соцсети</h5>
+          <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-links">
-            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="ЮТ"> YouTube</a>
-            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВК"> ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="ТК"> TikTok</a>
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" 
+              src="./images/youtube-icon.svg" alt="ЮТ"> YouTube</a>
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" 
+              src="./images/vk_color_white.svg" alt="ВК"> ВКонтакте</a>
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" 
+              src="./images/tiktok-icon.svg" alt="ТК"> TikTok</a>
           </div>
       </nav>
     </div>
