--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./index.css">
   <title>Научиться учиться</title>
 </head>
-<body class="page" >
+<body class="root">
 
   <header class="header">
     <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
@@ -15,7 +14,7 @@
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы 
       можете использовать в своей жизни? <a href=# class="header__link">Узнать &rarr;</a></p>
     <img src="./images/header-image.png" alt="Грустный мальчик" class="header__main-illustration">
-    <div class="header__square-pic"></div>
+    <div class="header__square-pic rotation"></div>
   </header>
 
   <main class="content">
@@ -31,6 +30,70 @@
             эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
       </div>
     </section>
+
+  <section class="techniques">
+     <h2 class="section-title">Техники обучения</h2>
+      <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+      <div class="cards">
+        <div class="cards__item">
+          <img class="cards__image" src="./images/cards-attention.png" alt="Два вида внимания">
+          <h3 class="cards__title">Два вида внимания</h3>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+        </div>
+        <div class="cards__item">
+          <img class="cards__image" src="./images/cards-recall.png" alt="Рекол">
+          <h3 class="cards__title">Recall</h3>
+          <p class="cards__description">Вспоминайте изученное – это позволит соединить разрозненные порции памяти.</p>
+        </div>
+        <div class="cards__item">
+          <img class="cards__image" src="./images/cards-interliving.png" alt="Интерливинг">
+          <h3 class="cards__title">Интерливинг</h3>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </div>
+        <div class="cards__item">
+          <img class="cards__image" src="./images/cards-question.png" alt="Вопросы">
+          <h3 class="cards__title">Вопросы</h3>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+        </div>
+        <div class="cards__item">
+          <img class="cards__image" src="./images/cards-competence.png" alt="компетентность">
+          <h3 class="cards__title">Иллюзия компетентности</h3>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+        </div>
+        <div class="cards__item"></div>
+      </div>
+  </section>
+
+  <section class="video">
+    <h2 class="section-title">Видео на TED</h2>
+      <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+      <iframes class="video__iframes">
+        <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen></iframe> 
+        <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen></iframe> 
+      </iframes>
+    </section>
+
+  <section class="oakley">
+    <div class="two-columns">
+      <h2 class="two-columns__brief">История Барбары Оакли</h2>
+      <p class="two-columns__paragraph two-columns__main-text">С детства Барбаре не давалась математика. Она считала себя законченным
+      гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку,
+      да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
+      И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся»,
+      ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+    </div>
+  </section>
+
+  <section class="feynman">
+    <h2 class="feynman__title">Метод Фейнмана</h2>
+    <p class="feynman__subtitle">Выучить и не забыть.</p>
+    <a href=# class="feynman__link">Подробнее &rarr;</a>
+    <img class="feynman__image" src="./images/feynman.png" alt="Фейнман">
+  </section>
 
   <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
@@ -71,14 +134,23 @@
         <p class="table__text">Открытие условного рефлекса</p>
       </div>
     </div>
-  </section> 
+  </section>
 
-    <section class="feynman">
-      <h2 class="feynman__title">Метод Фейнмана</h2>
-      <p class="feynman__subtitle">Выучить и не забыть.</p>
-      <a href=# class="feynman__link">Подробнее &rarr;</a>
-      <img class="feynman__image" src="./images/feynman.png" alt="Фейнман">
-    </section>
+  <section class="khan">
+    <div class="khan__container">
+      <p class="khan__author">Салман Хан</p>
+      <h2 class="khan__title">Весь мир – школа</h2>
+      <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
+        по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так
+        учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+      <p class="khan__quote-author">Джордж Лукас</p>
+      <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+      <div class="khan__book-container">
+        <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Хана">
+        <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+      </div>
+    </div>
+  </section>
 
     <section class="kaufman">
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -125,10 +197,22 @@
           <p class="table__text">Уделяйте внимание количеству и скорости.</p>
         </div>
       </div>
-      <div class="kaufman__triangle"></div>
+      <div class="kaufman__triangle rotation"></div>
     </section>
-  </main>
 
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <div class="resources__logo-zone">
+        <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Арзамас"></a>
+        <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Н1"></a>
+        <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Стрелка"></a>
+        <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Полка"></a>
+      </div>
+    </section>
+
+
+  </main>
   <footer class="footer">
     <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
