--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
       <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
       <div class="video__iframes">
         <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen>Здесь должно быть видео, но ваш браузер не поддерживает iframe</iframe> 
         <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen>Здесь должно быть видео, но ваш браузер не поддерживает iframe</iframe> 
       </div>
     </section>
