--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
-<body class="root">
+<body class="page">
 
   <header class="header">
     <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
@@ -18,21 +18,23 @@
   </header>
 
   <main class="content">
-    <section class="two-columns">
-      <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-      <div class="two-columns__main-text">
-        <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы 
+    <section class="description">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы 
           готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,чтобы лучше сдать тест,
           но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
           <p class="two-columns__paragraph"> <span class="two-columns__span-accent">Вывод:</span>
             учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-          <p class="two-columns__paragraph">Конкретные техники и упраженения помогают изменить подход к обучению, сделать его 
+          <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его 
             эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        </div>
       </div>
     </section>
 
-  <section class="techniques">
-     <h2 class="section-title">Техники обучения</h2>
+    <section class="techniques">
+      <h2 class="section-title">Техники обучения</h2>
       <p class="section-subtitle">Пять практик от Барбары Оакли</p>
       <div class="cards">
         <div class="cards__item">
@@ -62,10 +64,10 @@
         </div>
         <div class="cards__item"></div>
       </div>
-  </section>
+    </section>
 
-  <section class="video">
-    <h2 class="section-title">Видео на TED</h2>
+    <section class="video">
+      <h2 class="section-title">Видео на TED</h2>
       <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
       <div class="video__iframes">
         <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" 
@@ -75,80 +77,82 @@
       </div>
     </section>
 
-  <section class="oakley">
-    <div class="two-columns">
-      <h2 class="two-columns__brief">История Барбары Оакли</h2>
-      <p class="two-columns__paragraph two-columns__main-text">С детства Барбаре не давалась математика. Она считала себя законченным
-      гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку,
-      да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
-      И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся»,
-      ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
-    </div>
-  </section>
+    <section class="oakley">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+          гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку,
+          да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
+          И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся»,
+          ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+        </div>
+      </div>
+    </section>
 
-  <section class="feynman">
-    <h2 class="feynman__title">Метод Фейнмана</h2>
-    <p class="feynman__subtitle">Выучить и не забыть.</p>
-    <a href=# class="feynman__link">Подробнее &rarr;</a>
-    <img class="feynman__image" src="./images/feynman.png" alt="Фейнман">
-  </section>
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <p class="feynman__subtitle">Выучить и не забыть.</p>
+      <a href=# class="feynman__link">Подробнее &rarr;</a>
+      <img class="feynman__image" src="./images/feynman.png" alt="Фейнман">
+    </section>
 
-  <section class="digits">
+    <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
       <p class="section-subtitle">Про учёбу и мозг</p>
-    <div class="table">
-      <div class="table__cell">
-        <h3 class="table__heading">86 миллиардов</h3>
-        <p class="table__text">Число нейронов в мозге человека</p>
+      <div class="table">
+        <div class="table__cell">
+          <h3 class="table__heading">86 миллиардов</h3>
+          <p class="table__text">Число нейронов в мозге человека</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">2,1 миллиарда</h3>
+          <p class="table__text">Число нуждающихся в повышении квалификации</p>
+          <p class="table__text">Всемирный банк, 2017</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">1000 терабайт</h3>
+          <p class="table__text">Объем памяти человека</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">500 триллионов</h3>
+          <p class="table__text">Число ответственных за обучение нейронных синапсов у взрослого человека</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">420 миллионов</h3>
+          <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+          <p class="table__text">Всемирный банк, 2017</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">17–20 лет</h3>
+          <p class="table__text">Пик обучаемости</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">1885 год</h3>
+          <p class="table__text">Открытие кривой забывания</p>
+        </div>
+        <div class="table__cell">
+          <h3 class="table__heading">1889 год</h3>
+          <p class="table__text">Открытие условного рефлекса</p>
+        </div>
       </div>
-      <div class="table__cell">
-        <h3 class="table__heading">2,1 миллиарда</h3>
-        <p class="table__text">Число нуждающихся в повышении квалификации</p>
-        <p class="table__text">Всемирный банк, 2017</p>
-      </div>
-      <div class="table__cell">
-        <h3 class="table__heading">1000 терабайт</h3>
-        <p class="table__text">Объем памяти человека</p>
-      </div>
-      <div class="table__cell">
-        <h3 class="table__heading">500 триллионов</h3>
-        <p class="table__text">Число ответственных за обучение нейронных синапсов у взрослого человека</p>
-      </div>
-      <div class="table__cell">
-        <h3 class="table__heading">420 миллионов</h3>
-        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-        <p class="table__text">Всемирный банк, 2017</p>
-      </div>
-      <div class="table__cell">
-        <h3 class="table__heading">17–20 лет</h3>
-        <p class="table__text">Пик обучаемости</p>
-      </div>
-      <div class="table__cell">
-        <h3 class="table__heading">1885 год</h3>
-        <p class="table__text">Открытие кривой забывания</p>
-      </div>
-      <div class="table__cell">
-        <h3 class="table__heading">1889 год</h3>
-        <p class="table__text">Открытие условного рефлекса</p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="khan">
-    <div class="khan__container">
-      <p class="khan__author">Салман Хан</p>
-      <h2 class="khan__title">Весь мир – школа</h2>
-      <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
+    <section class="khan">
+      <div class="khan__container">
+        <p class="khan__author">Салман Хан</p>
+        <h2 class="khan__title">Весь мир – школа</h2>
+        <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
         по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так
-        учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-      <p class="khan__quote-author">Джордж Лукас</p>
-      <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
-      <div class="khan__book-container">
-        <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Хана">
-        <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+        учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+        <p class="khan__quote-author">Джордж Лукас</p>
+        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+        <div class="khan__book-container">
+          <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Хана">
+          <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
     <section class="kaufman">
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -188,7 +192,7 @@
         </div>
         <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading">9</h3>
-          <p class="table__text">Занимайтесь по расписанию, корткими интенсивными интервалами.</p>
+          <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading">10</h3>
@@ -208,7 +212,6 @@
         <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Полка"></a>
       </div>
     </section>
-
 
   </main>
   <footer class="footer">
