--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section class="feynman">
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <p class="feynman__subtitle">Выучить и не забыть.</p>
-      <a href=# class="feynman__link">Подробнее &rarr;</a>
+      <a href="#" class="feynman__link">Подробнее &rarr;</a>
       <img class="feynman__image" src="./images/feynman.png" alt="Фейнман">
     </section>
 
